k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - saurl.io
    - www.saurl.io
    secretName: saurl-io
  rules:
  - host: saurl.io
    http:
      paths:
      - path: /[a-zA-Z0-9]{7}/?$
        backend:
          serviceName: api-cluster-ip-service
          servicePort: 5000
      - path: /api/
        backend:
          serviceName: api-cluster-ip-service
          servicePort: 5000
      - path: /
        backend:
          serviceName: client-cluster-ip-service
          servicePort: 3000
  - host: www.saurl.io
    http:
      paths:
      - path: /[a-zA-Z0-9]{7}/?$
        backend:
          serviceName: api-cluster-ip-service
          servicePort: 5000
      - path: /api/
        backend:
          serviceName: api-cluster-ip-service
          servicePort: 5000
      - path: /
        backend:
          serviceName: client-cluster-ip-service
          servicePort: 3000
